--- a/public/data/tasks.json
+++ b/public/data/tasks.json
@@ -3,7 +3,7 @@
     "id": 1,
     "name": "Do something",
     "category": "Social",
-    "deadline_date": "2023-02-01",
+    "deadline_date": "2023-01-25",
     "deadline_time": "13:30",
     "complete": false,
     "user_id": 1
@@ -27,8 +27,8 @@
     "id": 4,
     "name": "Do something for school",
     "category": "School",
-    "deadline_date": "2023-02-01",
-    "deadline_time": "13:30",
+    "deadline_date": "2023-02-22",
+
     "complete": false,
     "user_id": 1
   },
@@ -36,8 +36,26 @@
     "id": 5,
     "name": "Do something at home",
     "category": "Home",
-    "deadline_date": "2023-02-01",
+    "deadline_date": "2023-02-10",
     "deadline_time": "13:30",
+    "complete": false,
+    "user_id": 1
+  },
+  {
+    "id": 6,
+    "name": "Do something in the past",
+    "category": "Home",
+    "deadline_date": "2023-01-19",
+    "deadline_time": "18:30",
+    "complete": true,
+    "user_id": 1
+  },
+  {
+    "id": 7,
+    "name": "Do something today",
+    "category": "Home",
+    "deadline_date": "2023-01-20",
+    "deadline_time": "18:30",
     "complete": false,
     "user_id": 1
   }
